<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:descendantFocusability="blocksDescendants"
	>
	<!-- 图片 -->
	<ImageView    
		android:layout_height="200dp"    
		android:layout_width="wrap_content"    
		android:id="@+id/main_nine_itemImage"
		android:layout_marginBottom="5dp"    
	    />
	<LinearLayout
		android:layout_height="wrap_content"    
		android:layout_width="fill_parent"   
		android:layout_marginBottom="5dp"    
		android:orientation="horizontal"
		>
		<!-- 菜谱名称 -->
		<TextView
			android:layout_height="wrap_content"    
			android:layout_width="fill_parent"
			android:id="@+id/main_nine_itemName" 
			android:text="@string/main_nine_itemName"
			android:gravity="center_vertical|center_horizontal"
			android:layout_weight="1"
			/>
		<!-- 菜谱价格 -->
		<TextView
			android:layout_height="wrap_content"    
			android:layout_width="fill_parent"
			android:id="@+id/main_nine_itemPrice" 
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/main_nine_itemPrice"
			android:layout_weight="1"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_height="wrap_content"    
		android:layout_width="fill_parent"   
		android:layout_marginBottom="5dp"    
		android:orientation="horizontal"
		>
		<!-- 已点份数 -->
		<TextView
			android:layout_height="wrap_content"    
			android:layout_width="fill_parent"
			android:id="@+id/main_nine_itemCount" 
			android:gravity="center_vertical"
			android:text="@string/main_nine_itemCount"
			android:layout_weight="1"
			/>
		<!-- 加入订单 -->
		<Button
			android:layout_width="80dp"
			android:layout_height="60dp"    
			android:gravity="center_vertical"
			android:id="@+id/main_nine_itemButton" 
			android:text="@string/main_nine_itemButton"
			android:textSize="18sp"
			/>
	</LinearLayout>
</LinearLayout>
