<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="#efefef" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
  	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	  android:orientation="vertical"
	  android:layout_width="280dp"
	  android:layout_height="220dp"
	  android:layout_marginTop="15dp"
	  android:layout_gravity="center_horizontal">
  		<TextView
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/login_username"
  			android:textColor="#000000"
  			android:textSize="20dp"
  			android:layout_marginTop="10dp"
  			android:layout_marginLeft="10dp"
  			android:layout_marginBottom="5dp"
  		/>
  		<EditText
  			android:layout_width="260dp"
  			android:layout_height="wrap_content"
  			android:layout_gravity="center_horizontal"
  			android:id="@+id/login_username"
  		/>
  		<TextView
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/login_password"
  			android:textColor="#000000"
  			android:textSize="20dp"
  			android:layout_marginLeft="10dp"
  			android:layout_marginBottom="5dp"
  		/>
  		<EditText
  			android:layout_width="260dp"
  			android:layout_height="wrap_content"
  			android:layout_gravity="center_horizontal"
  			android:id="@+id/login_password"
  		/>
  		  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:layout_marginTop="6dp">
			<Button
	  			android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:layout_alignParentLeft="true"
	  			android:text="@string/login"
	  			android:layout_gravity="left|center_vertical"
	  			android:layout_marginLeft="10dp"
	  			android:id="@+id/login_submit"
	  		/>
		  </RelativeLayout>		  
  	</LinearLayout>
</LinearLayout>

